lab1/Test/L1-A-10-60.output
Error Type B at Line 2
Error Type B at Line 12
Error Type A at Line 21
Error Type B at Line 36
