lab1/Test/L1-A-10-60.cmm
struct {
}! onCSxlTXvDa2Nf ( ) {
  int wlfXRXotH5kypy [ 1857258319 ] = ikVd = Uyrq8VRim 
    || WzaTrfuInlAzJkv2aHM [ PpV && XeDE44ASI != SUJ7wfQUVzT3 
    - qSfWNvkZWy * - ! PpY_WLKAT47 ( _iEpaF = d == wn 
    + ( Zy || LIxRU8M > ej32qdNIcHymbMi7q / ! - T7Ld8AP1MWRZZsPebeC 
    [ sTSA1gRuzEQsNLZR = - ( c || Cw7nA2x != eBWhob ( 
    b9T7Nca , a4T1dW76 ) != edyspl9WXVmtAX . Gp ) = ! 
    b_f8vMj . ZnLTFKdIIVwCIpYc = xlBtHWnbSuqxZPl1gZ6j 
    < PnAIT_0 / a_1GaGzt2KLdl7yP <= mZvgNA ] + 405417461.1545898495 
    >= 1347894769 . MVjzgZXRUJ ) * ! nrxMgDcWldOzD5 ( 
    ) . vW / X7HJ3tSY8oV0 ) == ] , _eIXD80Oe ;
}
int ;
int ;
float thNUIM4 
;
struct ZG {
};
struct S3LeMRo8ycl3bz0m2CzG ;
int xCGyi5GMMC1BOyH ( int ^_bpyB5aAqN7KdEz_1V , int 
  h_rU ) {
  if ( KNgT_L )   if ( O9H4OOR1f2q2WU9 ) {
  }else   if ( iSob5JHPD76OE9XH )   while ( Kbmc02IStDM 
    )   return uBO8v ;




  i3W5UV2orgSIL9tll ;
}
int gQOZ2fWhIqyZukM , dXXxSPgOtVGPdAss 

;
int ;
int ;int 
int ;
int ;
int AZdbeqV ( ) {
  Vp3Z8h91rSsZnT ;
  if ( LmKZ7TD80v )   nNSX7b6G16 ;
else   Y_lpjk_jWr ;

}
